@@ -1,3 +1,4 @@
+#!perl
 use strict;
 use warnings;
 use ExtUtils::MakeMaker;
